[package]
name = "nestwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5"
axum = "0.8.9"
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
image = "0.25"
rcgen = { version = "0.14", default-features = false, features = ["ring", "pem", "crypto"] }
rpassword = "7.5.4"
rand_core = { version = "0.6", features = ["getrandom"] }
rust-embed = { version = "8", features = ["mime-guess"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal", "io-util", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tower-sessions = "0.15"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xcap = "0.9"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }

# Keep the shipped .exe small and self-contained.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_RemoteDesktop", "Win32_Security", "Win32_System_Threading", "Win32_System_Environment", "Win32_System_StationsAndDesktops"] }
windows-service = "0.8.1"
