[package]
name = "nestwatch"
version = "0.2.1"
edition = "2024"
# Private tool — guard against accidental `cargo publish` to crates.io.
publish = false

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5"
axum = "0.8.9"
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
image = "0.25"
rcgen = { version = "0.14", default-features = false, features = ["ring", "pem", "crypto"] }
rpassword = "7.5.4"
rand_core = { version = "0.6", features = ["getrandom"] }
rust-embed = { version = "8", features = ["mime-guess"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal", "io-util", "time", "sync"] }
tower = { version = "0.5.3", features = ["util"] }
tower-sessions = "0.15"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
sha2 = "0.10"
time = { version = "0.3.53", default-features = false, features = ["std"] }

# Keep the shipped .exe small and self-contained.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target."cfg(windows)".dependencies]
# Screen capture is only used on Windows (control/windows.rs); keeping it Windows-only
# avoids pulling X11/Wayland system deps into Linux/macOS builds and CI.
xcap = "0.9"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_RemoteDesktop", "Win32_Security", "Win32_System_Threading", "Win32_System_Environment", "Win32_System_StationsAndDesktops", "Win32_System_Pipes"] }
windows-service = "0.8.1"
